añade estilos 'taskItem'. bugs fecha, align, z-index

--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ h1, h2, h3 {
 .dueDate {
     color: inherit;
     grid-area: date;
-    font-size: 0.95em;
+    font-size: 0.90em;
     border: 1px solid;
 }
 
@@ -440,28 +440,28 @@ h1, h2, h3 {
 .taskListProject {
     display: flex;
     flex-direction: column;
-    margin-left: 30%;
+    margin-left: 25%;
 }
 
 .taskListItem {
     display: grid;
     height: 100px;
-    width: 60%;
+    width: 65%;
     margin-top: 2em;
     justify-content: center;
     align-content: center;
     border: 2px solid #004e64;
     border-radius: 10px;
-    grid-template-columns: 40px 180px 180px 180px 40px;
+    grid-template-columns: 40px 180px 180px 180px 180px 40px;
     grid-template-rows: 40px 40px;
     grid-template-areas: 
-        "editTask taskTitle taskDate taskPriority taskCheck"
-        "editTask taskNotes taskNotes taskNotes taskNotes";
+        "editTask taskTitle taskDate taskPriority labelTaskCheck taskCheck"
+        "editTask taskNotes taskNotes taskNotes labelTaskCheck taskCheck";
 }
 
 #editTask {
     grid-area: editTask;
-    margin-top: 25px;
+    margin-top: 30px;
 }
 
 .taskItemTitle {
@@ -483,6 +483,10 @@ h1, h2, h3 {
     border-radius: 5px;
 }
 
+.labelTaskItemCheck {
+    grid-area: labelTaskCheck;
+}
+
 .taskItemCheck {
     grid-area: taskCheck;
 }
@@ -492,7 +496,8 @@ h1, h2, h3 {
 }
 
 #editTask, .taskItemTitle, .taskItemDate,
-.taskItemPriority, .taskItemCheck, .taskItemNotes {
+.taskItemPriority, .taskItemCheck, .taskItemNotes,
+.labelTaskItemCheck {
     font-size: 1.25em;
     text-align: center;
 }
